--- a/pages/learn/storia_elettroacustica/musica_concreta_primo_periodo.html
+++ b/pages/learn/storia_elettroacustica/musica_concreta_primo_periodo.html
@@ -96,11 +96,11 @@
                     <br>
                     Schaeffer dunque catalogherà i suoni per risolvere il problema dell’infinità dei suoni, catalogandoli per:
                     <ul>
-                      <li>durata<li>
-                      <li>profilo energetico<li>
-                      <li>grana<li>
-                      <li>tessitura<li>
-                      <li>struttura della durata<li>
+                      <li>durata</li>
+                      <li>profilo energetico</li>
+                      <li>grana</li>
+                      <li>tessitura</li>
+                      <li>struttura della durata</li>
                   </ul>
                   </p>
                 </div>
@@ -149,6 +149,43 @@
 
 <br>
 <br>
+
+
+<!-- Numbering-->
+<section data-bs-version="5.1" class="content9 cid-sZjYmNvCz7" id="content9-2b">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="counter-container col-md-12 col-lg-10">
+                <div class="mbr-text mbr-fonts-style display-7">
+                    <ol>
+                        <li><strong>Étude aux chemins de fer - trains</strong>
+                          <br>Siamo proprio alle origini. Loop/ solco chiuso. La realta per definizione non è ripetitiva. Esperienza che fluisce nel tempo che non permette ritorno, impregnata di tempo che passa. Solco chiuso mi permette di ripresentare un oggetto identico, ritmo. Nel momento in cui taglio un pezzo di suono e lo ripeto genero ritmo. Col fischio del treno distingue suoni segnale da suoni corpo. Tendiamo ad enfatizzarne i significati archeologici. Inizio embrionale, primitivo, loop che mi permette di dare ritmo ad una realtà che non ce l'ha. Esperienza inaudita perché nella realtà non esiste una ripetizione uguale a se stessa.</li>
+                        <li><strong>Étude aux tourniquets - toy tops and percussion instruments</strong>
+                          <br>Un passo diverso. Sentiamo dei strumenti musicali. Pezzo acusmatico. Ad una certa sentiamo la melodia di un violino. Qual'è il suo significato? È mimetico o rappresenta soltanto un suono? La risposta giusta non c'è. Schaeffer mette appunto un tipo di apparecchio detto fologeno, che permette di variare la velocità ed il pitch, oppure solo la velocità. Mescolanza di elementi riproposti con durate velocità e pitch diversi.
+                          <br>
+                          <br>
+                          Suono strumentale si muove su tre livelli:
+                          <br>
+                          <br>
+                          <ul>
+                          <li>Storia - mondo: imprescindibile. Non potrà mai essere oggetto sonoro e basta.
+                          </li>
+                          <li>Semilavorati in musica: accordi, scale, tecniche, metri, convenzioni strumentali, tutto ciò che è precomposto, elementi già a nostra disposizione.
+                          </li>
+                          <li>Suono: Se nel mio pezzo metto solo una nota di violino, non sono più in presenza di una codifica del mondo o precomposta, sono nel suono. La pura timbrica. Songe di Risset.</li>
+                        </li>
+                        <li><strong>Étude violette - piano</strong>
+                          <br>Protagonista assoluto è il pianoforte. Rumorizzazione del musicale. L'elemento musicale garantito però in questo caso l'uso del loop e del reverse servono a delocalizzare rispetto le abitudini il musicale pianistico. Suono strettamente imparentato col tempo, ma ascoltare al contrario è un'esperienza forte, inaudita. Pianoforte senza attacco preludio fasce sonore. NB Beethoven canti popolari per pianoforte.</li>
+                        <li><strong>Étude noire - piano</strong>
+                          <br>Più lunga. Incrocia le tecniche delle prime composizioni. Sta imparando a scrivere. Sviluppa gli elementi. </li>
+                        <li><strong>Étude pathétique - sauce pans, canal boats, singing, speech, harmonica, piano</strong>
+                          <br>Impressionante la capacità evocativa. C'è una cosa che non c'è mai stata: la voce. Questo studio ha una struttura narrativa. Indaga le caratteristiche morfologiche di un accadimento sonoro. Dal coperchio che cade è come se vuole farci sentire com'è bello. C'è un po tutto.</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 <!-- Prev/Next-->
