--- a/pages/learn/storia_elettroacustica/musica_concreta_primo_periodo.html
+++ b/pages/learn/storia_elettroacustica/musica_concreta_primo_periodo.html
@@ -150,6 +150,16 @@
 <br>
 <br>
 
+<!-- Title-->
+<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+  <div class="container">
+      <div class="row justify-content-center">
+          <div class="title col-md-12 col-lg-10">
+              <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">ANALISI</h3>
+          </div>
+      </div>
+  </div>
+</section>
 
 <!-- Numbering-->
 <section data-bs-version="5.1" class="content9 cid-sZjYmNvCz7" id="content9-2b">
