--- a/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html
+++ b/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Storia della Musica Elettroacustica</title>
+  <title>Evoluzione del Pensiero Elettroacustico</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -72,53 +72,82 @@
   <!-- Navbar-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
 
-
-<!-- Header-->
-<section data-bs-version="5.1" class="info3 cid-sYzbPCvQ7r mbr-parallax-background" id="info3-1g">
-  <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
-  </div>
-  <div class="container">
-      <div class="row justify-content-center">
-          <div class="card col-12 col-lg-10">
-              <div class="card-wrapper">
-                  <div class="card-box align-center">
-                      <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>STORIA DELLA MUSICA ELETTROACUSTICA</strong></h4>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
+  <!-- Title-->
+<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="title col-md-12 col-lg-10">
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica Elettroacustica</h3>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Evoluzione del Pensiero Elettroacustico</strong></h4>
+            </div>
+        </div>
+    </div>
 </section>
 
 
-  <!-- Index-->
-
-  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-10">
-                  <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
-                    <br>
-                    <br>
-                      <strong>INDICE</strong>
-                  </h4>
+              <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    <strong>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/leggi_della_gestalt.html" class="text-primary"><b>Leggi della Gestalt</b></a>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/mimetico_aurale.html" class="text-primary"><b>Mimetico-Aurale</b></a>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html" class="text-primary"><b>Nascita della Musica Concreta</b></a>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_concreta_primo_periodo.html" class="text-primary"><b>Musica Concreta - Primo Periodo</b></a>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_concreta_secondo_periodo.html" class="text-primary"><b>Musica Concreta - Secondo Periodo (coming soon)</b></a>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html" class="text-primary"><b>Evoluzione del Pensiero Elettroacustico</b></a>
-                    </strong>
-
-                    <br>
-                    <br>
+                    Edgard_Varèse, credeva che la musica si dovesse evolvere verso linguaggi nuovi, ma non riuscì ad espandere la sua idea compositiva e rimase al collagismo, realizzando però un’opera, il "Poeme Electronique", la quale presenta elementi di andamento Narrativo che lo rendono archetipico ed esemplare come brano della Storia della Musica Elettroacustica. Il Poeme è una composizione che venne realizzata per il padiglione Philips per l’expo del 1958 tenutasi a Bruxelles, venne scritta su 3 piste, e poi riportata su nastro traforato per la sincronizzazione con gli eventi visuali. Per l’ingresso del padiglione Xenakis realizzò Concret PH (concreto parabolico), ambiente sonoro mandato in loop che realizzava una prima “doccia elettronica” dello spettatore, il lavoro non veniva assolutamente considerato musica. Il progetto nacque dall'idea di LeCorbusier, il quale aveva come aiutante Xenakis.
                   </p>
-              </div>
-          </div>
-      </div>
-  </section>
+                </div>
+            </div>
+        </div>
+    </section>
+
+  <!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+    <div class="container">
+        <div class="title-wrapper mb-5">
+        </div>
+        <div class="row align-items-center">
+            <div class="col-12 col-lg-4 video-block">
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/WQKyYmU2tPg" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            </div>
+            <div class="col-12 col-lg">
+                <div class="text-wrapper">
+                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                        <strong>Edgar Varese - Poeme Electronique (1958)</strong>
+                    </h5>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      All'interno del Poeme troviamo delle voci, che sono musica ma anche realtà:
+                      <br><br>
+                      <ul>
+                      <li>voce atonale</li>
+                      <br><br>
+                      <li>frammento corale</li>
+                      <br><br>
+                      <li>frammento parlato/narrato</li>
+                    </ul>
+                      <br><br>
+                      Le caratteristiche che si evidenziano sono la scarsa polifonia, ed i suoni ripetuti identici, quasi a mo di segnale all'interno del brano, come la campana o appunto la voce, per chiarificare la successione degli eventi. (Elementi che rappresentano i brani di musica elettronica: 1. presenza di silenzi 2. presenza di suoni-segnale). Il Poeme rappresenta narrativamente un messaggio di progresso, di amicizia ed umanità, il percorso sonoro-narrativo è accostabile al percorso evolutivo dell’umanità, gli elementi acquistano senso dal contesto al contrario di Luc Ferrari, in cui i suoni sono ciò che sono. Per poter realizzare un’analisi del Poeme, bisognerebbe analizzare tutto il padiglione Philips, Varese definiva il padiglione “un padiglione in bottiglia”.                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<br>
+<br>
+
+
+<!-- Prev/Next-->
+<section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-10">
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                    <br>
+                    <br>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
