--- a/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html
+++ b/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html
@@ -130,6 +130,31 @@
     </div>
 </section>
 
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/XsOyxFybxPY" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>Iannis Xenakis - Concret PH (1958)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    In Concret PH Xenakis attraverso la concezione dei grani attua un’evoluzione molto lenta ma senza narrazione, Concret PH risulta nel contesto del padiglione Philips di una modernità straordinaria, ed anche se è possibile individuarlo solamente a posteriori, Xenakis, avendo un pezzo di “tappezzeria” da inserire, si è sentito libero di comporre qualcosa che inducesse il pubblico ad ascoltare, che lo inducesse a fermarsi ed a porre il pubblico in un clima acustico. Concret PH dunque non invecchierà mai, poiché preanuncia la stagione della granulazione, il procedere di Xenakis nel tempo acquisì un procedimento formale con la stocastica e la statistica, ed ha portato a risultati sonori simili da parte di altri autori solo negli anni ’80, con ad esempio Riverrun di Barry Truax.
+                    </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+
 <br>
 <br>
 
