--- a/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html
+++ b/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html
@@ -113,15 +113,7 @@
                         <strong>Edgar Varese - Poeme Electronique (1958)</strong>
                     </h5>
                     <p class="mbr-text mbr-fonts-style display-7">
-                      All'interno del Poeme troviamo delle voci, che sono musica ma anche realtà:
-                      <br><br>
-                      <ul>
-                      <li>voce atonale</li>
-                      <br><br>
-                      <li>frammento corale</li>
-                      <br><br>
-                      <li>frammento parlato/narrato</li>
-                    </ul>
+                      All'interno del Poeme troviamo delle voci, che sono musica ma anche realtà: voce atonale, frammento corale, frammento parlato/narrato.
                       <br><br>
                       Le caratteristiche che si evidenziano sono la scarsa polifonia, ed i suoni ripetuti identici, quasi a mo di segnale all'interno del brano, come la campana o appunto la voce, per chiarificare la successione degli eventi. (Elementi che rappresentano i brani di musica elettronica: 1. presenza di silenzi 2. presenza di suoni-segnale). Il Poeme rappresenta narrativamente un messaggio di progresso, di amicizia ed umanità, il percorso sonoro-narrativo è accostabile al percorso evolutivo dell’umanità, gli elementi acquistano senso dal contesto al contrario di Luc Ferrari, in cui i suoni sono ciò che sono. Per poter realizzare un’analisi del Poeme, bisognerebbe analizzare tutto il padiglione Philips, Varese definiva il padiglione “un padiglione in bottiglia”.                    </p>
                 </div>
