--- a/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html
+++ b/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html
@@ -91,7 +91,7 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    Edgard_Varèse, credeva che la musica si dovesse evolvere verso linguaggi nuovi, ma non riuscì ad espandere la sua idea compositiva e rimase al collagismo, realizzando però un’opera, il "Poeme Electronique", la quale presenta elementi di andamento Narrativo che lo rendono archetipico ed esemplare come brano della Storia della Musica Elettroacustica. Il Poeme è una composizione che venne realizzata per il padiglione Philips per l’expo del 1958 tenutasi a Bruxelles, venne scritta su 3 piste, e poi riportata su nastro traforato per la sincronizzazione con gli eventi visuali. Per l’ingresso del padiglione Xenakis realizzò Concret PH (concreto parabolico), ambiente sonoro mandato in loop che realizzava una prima “doccia elettronica” dello spettatore, il lavoro non veniva assolutamente considerato musica. Il progetto nacque dall'idea di LeCorbusier, il quale aveva come aiutante Xenakis.
+                    Edgard Varèse, credeva che la musica si dovesse evolvere verso linguaggi nuovi, ma non riuscì ad espandere la sua idea compositiva e rimase al collagismo, realizzando però un’opera, il "Poeme Electronique", la quale presenta elementi di andamento Narrativo che lo rendono archetipico ed esemplare come brano della Storia della Musica Elettroacustica. Il Poeme è una composizione che venne realizzata per il padiglione Philips per l’expo del 1958 tenutasi a Bruxelles, venne scritta su 3 piste, e poi riportata su nastro traforato per la sincronizzazione con gli eventi visuali. Per l’ingresso del padiglione Xenakis realizzò Concret PH (concreto parabolico), ambiente sonoro mandato in loop che realizzava una prima “doccia elettronica” dello spettatore, il lavoro non veniva assolutamente considerato musica. Il progetto nacque dall'idea di LeCorbusier, il quale aveva come aiutante Xenakis.
                   </p>
                 </div>
             </div>
@@ -146,6 +146,33 @@
   </div>
 </section>
 
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/8C6XlF_2VrQ" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>Luc Ferrari - Presque Rien n1 (1971)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    È una registrazione di un solo ambiente, rimanda alla classicità, un suono preso, staccato e riproposto sulla pellicola sonora, vi sono 4 di questi brani, di cui il più famoso è quello sulla spiaggia. Decide dunque di asportare il suono di una realtà. Registra i suoni di Presque Rien (quasi niente) Nº1 sulle coste del Mar Nero, la registrazione è effettuata con microfoni in vari punti.
+                    <br><br>
+                    Il brano è suddivisibile in tre parti della materia sonora: 1. introduzione e presentazione dei vari suoni 2. motore. 3. comparsa del canto (il canto detiene sempre una connotazione).
+                    <br><br>
+                    È da individuare la fondamentale differenza tra la passeggiata musicale de la Musique Promenade e Presque Rien, in Presque Rien, non vi è nessun significato ideologico e particolare, è puro accadere (collegandosi alla gallina all'interno del brano, possiamo ricordare come Leopardi abbia teorizzato l’ascolto acusmatico, attraverso una gallina in una poesia lirica). Dunque l’ascolto di Presque Rien nasce quasi dalla noia, la comparsa della voce arriva a tradimento.  Individuiamo in questo brano una sospensione del tempo e dello spazio ed il dettaglio più insignificante della realtà ripreso con uno sguardo attento, troviamo in Presque Rien dunque un brano leopardiano che riprende il mondo con una focale fissa Liberatosi del Kitsch, Ferrari va verso la purificazione del gesto come atto compositivo.
+                    </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
 
 <br>
 <br>
