--- a/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html
+++ b/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html
@@ -154,7 +154,31 @@
       </div>
       <div class="row align-items-center">
           <div class="col-12 col-lg-4 video-block">
-              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/8C6XlF_2VrQ" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/u81IGEFt7dM" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>Barry Truax - Riverrun (1968)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    Riverrun è uno dei brani simbolo del procedimento della granulazione e della creazione di massa, lo spettro che si realizza per Riverrun, diviene la partitura del brano (la sintesi granulare nasce per la realizzazione di suoni continui e sintesi vocale). Riverrun verifica la versatilità della sintesi granulare Truax, essendo canadese, riesce ad elaborare un brano assente da qualsiasi scrupolo della cultura europea (Varese non riuscendo a realizzare alcuni suoni obbiettivi, spesso li scrive, ad esempio, lui trova nell'elettronica uno strumento utile). Riverrun ha al suo interno anche una sorta di sentore narrativo, oltre ad essere un vero e proprio studio della granulazione.
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/8C6XlF_2VrQ" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
           </div>
           <div class="col-12 col-lg">
               <div class="text-wrapper">
@@ -173,6 +197,7 @@
       </div>
   </div>
 </section>
+
 
 <br>
 <br>
