--- a/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html
+++ b/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html
@@ -178,6 +178,34 @@
       </div>
       <div class="row align-items-center">
           <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/b-evL-lWhoQ" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>Luc Ferrari - Musique Promenade (1964-69)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    Uno dei possibili esiti del concretismo, fu realizzata a partire da registrazioni di ambienti, marcia di soldati (visione anti-militarista), musica, voce , utilizzo del reverse, silenzio, banda musicale, strumenti in generale. I gesti schaefferiani della prima ora, li ritroviamo dai 5 studi sul rumore, tutti in questa composizione, con un intento di narrazione, abbiamo una musica che realizza un effetto molto visivo.
+                    <br><br>
+                    All'interno troviamo come materiale utilizzato: lunghe registrazioni di campo (fondali), brevi registrazioni, registrazioni di suoni indecifrabili, suoni elettronici.
+                    <br><br>
+                    L’idea di Ferrari è che il soggetto camminante esprima sia una visione soggettiva ed al tempo stesso una visione della realtà ed emotiva, attraverso la deformazione dei suoni, il senso di questa composizione è tutto all'interno del suono, dalle idee alle associazioni di esse. Ferrari è documentario e naturalistico, e fa trapelare atteggiamenti finalistici da compositore, lascerà alle spalle la maschera schaefferiana e concretista nel brano Presque Rien.
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
               <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/8C6XlF_2VrQ" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
           </div>
           <div class="col-12 col-lg">
