--- a/pages/learn/storia_elettroacustica/musica_digitale.html
+++ b/pages/learn/storia_elettroacustica/musica_digitale.html
@@ -86,19 +86,39 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Il computer veniva definito cervello elettronico. Computer Music ha diversi significati:
+                    <br><br>
+                    <ul>
+                      <li>eseguire un software multicanale</li>
+                      <li>elaborazione dal vivo</li>
+                      <li>assemblaggio di suono al computer</li>
+                      <li>controllo di clip audio al computer</li>
                   </p>
                 </div>
             </div>
         </div>
     </section>
+
+
+  <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      Ma cosa significa Computer music negli anni ’50?
+                      <br><br>
+                      L’idea del cervello elettronico, è cambiata nel tempo, poiché il computer si pensava simulasse il pensiero umano, il computer è però una cosa che emula la realtà e con il tempo è divenuto simulatore della realtà. Il computer era visto come cervello elettronico fino agli anni ’90, metafora che tradiva una mentalità, dunque secondo questa mentalità, il computer non avrebbe potuto realizzare la sintesi, poiché la capacità di calcolo era limitata, dunque simulava il pensiero, dunque bisognava insegnare al computer a scrivere musica e non a sintetizzare il suono. Il primo esempio di Computer Music in quest’ottica è dunque realizzato da Hitler all'università dell’Illinois, insegnò ad un computer Illiac a scrivere quartetti in stile viennese nel 1956.
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </section>
 
   <!-- Video-->
 <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
@@ -107,16 +127,16 @@
         </div>
         <div class="row align-items-center">
             <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Yx_Q_mIth0Q" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/n0njBFLQSk8" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>György Ligeti - String quartet No.2 (1968)</strong>
+                        <strong>Lejaren Hiller - Illiac Suite (1956)</strong>
                     </h5>
                     <p class="mbr-text mbr-fonts-style display-7">
-                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
-                    </p>
+                      Proprio su questa linea di pensiero della simulazione della realtà si inserisce la "Illiac Suite" di Lejaren_Hiller del 1956. La Illiac Suite è infatti il primo pezzo realizzato da computer, e Hiller fece in modo che il computer scrivesse un quartetto d’archi in stile, secondo delle regole. Il primo utilizzo del computer fu infatti quello di concorrenza del pensiero umano, che viene descritta oggi come composizione assistita dal calcolatore. Anche se il pensiero alla base è cambiato negli anni infatti un computer ben istruito può elaborare la realtà, ovvero la sintesi del suono. I programmi usati da Hiller, Project 1 e Project 2, erano programmi per la generazione di partiture strumentali.
+                      </p>
                 </div>
             </div>
         </div>
@@ -126,6 +146,32 @@
 <br>
 <br>
 
+<!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-md-12 col-lg-8">
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    Anche la ASKO Suite di Koenig viene realizzata con regole seriali da un calcolatore e sembra appartenere alla seconda scuola viennese. Paradigma della computer music è anche questo utilizzo del computer per il ragionamento più che per la sintesi. Come il passaggio dalla musica medievale con la tradizione orale, che arriva all’Ars Nova con le prime polifonie scritte (proprio per via della scrittura e del tramandarsi non più orale dei testi si arriva alla polifonia), il compositore può prescindere dal contesto della realizzazione musicale (correlazione tra invenzione autonoma e scrittura, il computer lo diventa in seguito). Altro paradigma della musica elettronica diverrà la sintesi FM.
+                    <br><br>
+                    Hiller fu una figura poliedrica, e la sua composizione assistita dal computer ha lasciato tracce nella nostra tradizione, con software come Open Music o Opus Modus. Questi software di composizione assistita risentono però della zavorra compositiva notazionale, che è di fatto intrinseca all'idea di generazione automatica di partiture, la composizione assistita è quindi all'inizio improntata allo stesso modo della sintesi, ma è proprio qui che attraverso il software Music, che troviamo la divisione tra orchestra e partitura, e troviamo dunque una prima idea di programmazione assistita al computer della sintesi (partitura basata sul concetto di nota). Dunque esemplificando, la musica diviene la somma di unità significanti, che è obbligata e suggerita da un’architettura(Score fu anche il nome del programma che gestiva la partitura).
+                    <br><br>
+                    Avviene di fatto un’intrusione della musica assistita all'elaboratore, nella sintesi. Il pezzo diviene dunque l’algoritmo che gestisce la storia dello strumento (Forma del Respiro di Lupone).
+                    <br><br>
+                    L’idea della composizione assistita passa da Project 1 a 2 e poi arriva a Open Music il computer può essere in questa fase:
+                    <br><br>
+                    1. compositore
+                    <br><br>
+                    2. simulatore della realtà
+                    <br><br>
+                    Il software Music si pone nella seconda e la prima versione utilizzabile su varie macchine divenne Music V, antenato di CSound, poiché scritto in Fortran.
+                    <br><br>
+                    Pensare alla Computer Music ci deve far pensare a Max_Mathews, il quale realizza insieme a Newman Guttman uno dei brani più importanti della storia della musica elettronica, "The Silver Scale". Mathews nel 1960 realizzerà "Numerolgy". Gli esiti di Numerolgy furono i finanziamenti dai privati, e questi primi brani servivano solo per testimoniare le possibilità a livello scientifico ed economico, Altro brano che serviva a far sentire le possibilità del computer fu "Variazioni di timbro e attacco" di Pierce del 1961 (nel 1977 al CCRMA si faceva già sintesi in tempo reale con il Samson Box). strumenti elettronici
+                  </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
