--- a/pages/learn/storia_elettroacustica.html
+++ b/pages/learn/storia_elettroacustica.html
@@ -111,11 +111,11 @@
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_concreta_primo_periodo.html" class="text-primary"><b>Musica Concreta - Primo Periodo</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_concreta_secondo_periodo.html" class="text-primary"><b>Musica Concreta - Secondo Periodo (coming soon)</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html" class="text-primary"><b>Evoluzione del Pensiero Elettroacustico</b></a>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/studio_di_fonologia_di_milano.html" class="text-primary"><b>Studio di Fonologia di Milano</b></a>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/bruno_maderna.html" class="text-primary"><b>Bruno Maderna</b></a>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/confronto_berio_stockhausen.html" class="text-primary"><b>Confronto Berio - Stockhausen</b></a>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/luigi_nono.html" class="text-primary"><b>Luigi Nono</b></a>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/karlheinz_stockhausen.html" class="text-primary"><b>Karlheinz Stockhausen</b></a>
+                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/studio_di_fonologia_di_milano.html" class="text-primary"><b>Studio di Fonologia di Milano (coming soon)</b></a>
+                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/bruno_maderna.html" class="text-primary"><b>Bruno Maderna (coming soon)</b></a>
+                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/confronto_berio_stockhausen.html" class="text-primary"><b>Confronto Berio - Stockhausen (coming soon)</b></a>
+                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/luigi_nono.html" class="text-primary"><b>Luigi Nono (coming soon)</b></a>
+                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/karlheinz_stockhausen.html" class="text-primary"><b>Karlheinz Stockhausen (coming soon)</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale.html" class="text-primary"><b>Musica Digitale</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/jean_claude_risset.html" class="text-primary"><b>Jean-Claude Risset</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/john_chowning.html" class="text-primary"><b>John Chowning</b></a>
