--- a/pages/learn/storia_elettroacustica/musica_digitale.html
+++ b/pages/learn/storia_elettroacustica/musica_digitale.html
@@ -166,7 +166,7 @@
                     <br><br>
                     Il software Music si pone nella seconda e la prima versione utilizzabile su varie macchine divenne Music V, antenato di CSound, poiché scritto in Fortran.
                     <br><br>
-                    Pensare alla Computer Music ci deve far pensare a Max_Mathews, il quale realizza insieme a Newman Guttman uno dei brani più importanti della storia della musica elettronica, "The Silver Scale". Mathews nel 1960 realizzerà "Numerolgy". Gli esiti di Numerolgy furono i finanziamenti dai privati, e questi primi brani servivano solo per testimoniare le possibilità a livello scientifico ed economico, Altro brano che serviva a far sentire le possibilità del computer fu "Variazioni di timbro e attacco" di Pierce del 1961 (nel 1977 al CCRMA si faceva già sintesi in tempo reale con il Samson Box). strumenti elettronici
+                    Pensare alla Computer Music ci deve far pensare a Max Mathews, il quale realizza insieme a Newman Guttman uno dei brani più importanti della storia della musica elettronica, "The Silver Scale". Mathews nel 1960 realizzerà "Numerolgy". Gli esiti di Numerolgy furono i finanziamenti dai privati, e questi primi brani servivano solo per testimoniare le possibilità a livello scientifico ed economico, Altro brano che serviva a far sentire le possibilità del computer fu "Variazioni di timbro e attacco" di Pierce del 1961 (nel 1977 al CCRMA si faceva già sintesi in tempo reale con il Samson Box). strumenti elettronici
                   </p>
                 </div>
             </div>
