--- a/pages/learn/storia_elettroacustica/musica_digitale.html
+++ b/pages/learn/storia_elettroacustica/musica_digitale.html
@@ -173,6 +173,102 @@
         </div>
     </section>
 
+
+    <!-- Video-->
+  <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+      <div class="container">
+          <div class="title-wrapper mb-5">
+          </div>
+          <div class="row align-items-center">
+              <div class="col-12 col-lg-4 video-block">
+                  <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/PM64-lqYyZ8" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+              </div>
+              <div class="col-12 col-lg">
+                  <div class="text-wrapper">
+                      <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                          <strong>Newman Guttman - The silver scale (1957)</strong>
+                      </h5>
+                      <p class="mbr-text mbr-fonts-style display-7">
+                        Sintesi pcm (usato da sempre, funziona bene quindi mai sostituito)
+                        </p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
+
+  <!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+    <div class="container">
+        <div class="title-wrapper mb-5">
+        </div>
+        <div class="row align-items-center">
+            <div class="col-12 col-lg-4 video-block">
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/hVmbthBYFaw" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            </div>
+            <div class="col-12 col-lg">
+                <div class="text-wrapper">
+                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                        <strong>Max Mathews - Numerology (1960)</strong>
+                    </h5>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      Fatta con un computer grande quanto l'aula 1. Queste cose potevano dimostrare che c'era sviluppo, erano tollerati, non completamente accettati, nei laboratori Bells.
+                      </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/4YNg8VGqOl8" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>John Pierce - Variations in timbre and attack (1961)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    Dunque quello di Mathews divenne un appello ai compositore (serious composer) per far sfruttare i sistemi da loro inventati nella composizione ad un più alto livello. Tra i primi ospiti ai Bell_Laboratories vi fu James Tenney nel 1963 e allo stesso modo sorge la domanda: cosa faccio per ottenere dei suoni che interessino, e per gestirne le infinite possibilità?
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/8zlY9-EcGf8" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>James Tenney - Dialogue (1963)</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    Attraverso la realizzazione di Dialogue si inizia ad intravedere una direzione, la differenza tra gli esempi realizzati prima di questo brano, è che gli altri non sono appunto brani, ma esempi, Tenney applica serialità e rumore bianco, realizzando di fatto i primi paradigmi della Computer Music.
+                    </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
