--- a/pages/learn/storia_elettroacustica/analisi_della_musica_etlettroacustica.html
+++ b/pages/learn/storia_elettroacustica/analisi_della_musica_etlettroacustica.html
@@ -93,7 +93,20 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Pochi concetti nella musica elettronica possono esser dati per scontati: fascia sonora, tessitura, impulso.
+                    <br><br>
+                    L’ascolto della musica elettroacustica e l’analisi di essa è percepita da noi in base a criteri di tipo gestaltico. Storia ed analisi divisa in 3 momenti (schema a farfalla):
+                    <ul>
+                        <li><strong>Livello poietico:</strong> creazione generazione del nostro oggetto di studio, tutto ciò che è musica, costruzione a tutti i livelli, tecniche, contesto storico. Tutto ciò che complotta affinché una composizione esista.
+                        </li>
+                        <li><strong>Livello estesico:</strong> vicenda della composizione. Ricezione, ascolto, fortuna (dove come quanto è stato ascoltato), percezione. Una volta il pezzo esiste come esso influenza la realtà, che significato gli viene dato.
+                        </li>
+                        <li><strong>Livello neutro:</strong> in teoria è tutto quello che riguarda l'analisi della partitura. L'esigenza di fare la partitura è prettamente didattico. In fase di apprendistato devi avere un'idea ben precisa di quello che stai facendo. Dal punto di vista storico lo spartito per pianoforte è il testo. Il buon musicista affida il suo pensiero totale e autonomo alla musica che scrive (concezione romantica). Non ho bisogno di ascoltare, posso sentire leggendo le stesse emozioni. livello neutro e grafizzazione nella musica elettronica
+                        </li>
+                      </ul>
+                    </p>
+                      <p class="mbr-text mbr-fonts-style display-7">
+                        Non esiste corrispondenza necessaria tra poiesi ed estesi (caso di Webern). La fortuna può arrivare anche dopo secoli.
                   </p>
                 </div>
             </div>
