--- a/pages/learn/storia_elettroacustica/analisi_della_musica_etlettroacustica.html
+++ b/pages/learn/storia_elettroacustica/analisi_della_musica_etlettroacustica.html
@@ -86,8 +86,6 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
@@ -104,40 +102,49 @@
                         <li><strong>Livello neutro:</strong> in teoria è tutto quello che riguarda l'analisi della partitura. L'esigenza di fare la partitura è prettamente didattico. In fase di apprendistato devi avere un'idea ben precisa di quello che stai facendo. Dal punto di vista storico lo spartito per pianoforte è il testo. Il buon musicista affida il suo pensiero totale e autonomo alla musica che scrive (concezione romantica). Non ho bisogno di ascoltare, posso sentire leggendo le stesse emozioni. livello neutro e grafizzazione nella musica elettronica
                         </li>
                       </ul>
-                    </p>
-                      <p class="mbr-text mbr-fonts-style display-7">
-                        Non esiste corrispondenza necessaria tra poiesi ed estesi (caso di Webern). La fortuna può arrivare anche dopo secoli.
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
-  <!-- Video-->
-<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-    <div class="container">
-        <div class="title-wrapper mb-5">
-        </div>
-        <div class="row align-items-center">
-            <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Yx_Q_mIth0Q" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-            </div>
-            <div class="col-12 col-lg">
-                <div class="text-wrapper">
-                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>György Ligeti - String quartet No.2 (1968)</strong>
-                    </h5>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
-<br>
-<br>
+    <!-- Title-->
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="title col-md-12 col-lg-10">
+                  <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Livello neutro e grafizzazione nella musica elettronica</strong></h4>
+              </div>
+          </div>
+      </div>
+  </section>
+
+
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      La musica elettronica ci pone dei problemi sul livello neutro. Mancanza di omogeneità, deve essere integrato. Cosa facciamo se non c'è il testo? La partitura nella musica elettronica è garanzia della consapevolezza del compositore. Partitura a posteriori fa parte del livello estesico. Se non c'è una partitura ce la dobbiamo creare. Grafizzazione momento fondamentale dell'analisi. Creazione di un sistema al limite valido anche solo per quel pezzo.
+                      <br><br>
+                      La grafizzazione è un atto cognitivo intellettuale, deve essere coerente. Atto analitico e di scelta, perché deciderai cosa inserire nella grafizzazione. Costruisci conoscenza. L'importante di quello che fai è che sia comprensibile.
+                      <br><br>
+                      Con una formula sintetica possiamo dire che la partitura classica/romantica (strumentale) sono monumento, ha l'ambizione di rimanere del tempo come tale. L'essenza del pezzo di musica, la riproduzione è solo un'istanza, la partitura è una classe. L'importante è scrivere bene la classe. Il disegno è la classe di tutte le sue possibili colorazioni, causa formale di tutte le sue istanze. Nella musica elettronica questo monumento risulta spezzettato. Intavolatura: posizioni per i chitarristi, rappresentazione dei controllo dinamico, elenco dei valori dell'algoritmo ecc. Sono fondamentali ma non posso essere considerati partitura.
+                      <br><br>
+                      Spesso nella musica elettronica il livello neutro non c'è o è parziale, non potrai mai capire come suona il pezzo. Lo studio di questi materiali diventa non tanto di analisi quanto di filologia.
+                      <br><br>
+                      L'analisi deve scegliere se essere estesica o poietica. Poietica quasi impossibile, o perché materiali non sono accessibili, è più che altro un lavoro di filologia musicale. Possiamo parlare di poietica in casi molto rari in cui il pezzo si identifica alla tecnica utilizzata. Antony di Vessel può essere identificata come poietica quando ti riferisci alla sintesi additiva. Inseguire la tecnica di sintesi ascoltando.
+                      <br><br>
+                      Analisi poietica praticamente impossibile. Se la grafizzazione l'ha fatta l'autore potrebbe essere considerata poietica. Non può esistere corrispondenza di quello che vedo con quello che è stato fatto. Il prodotto dell'azione del compositore potrebbe non prevedere l'interpretazione che ne farà il fruitore.
+                      <br><br>
+                      Non tutto ciò che è musica è partitura, esistono manifestazioni musicali che non hanno partitura, per esempio la nostra Natasha_Barrett.
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </section>
 
 
 <!-- Prev/Next-->
