--- a/pages/learn/storia_elettroacustica/analisi_della_musica_etlettroacustica.html
+++ b/pages/learn/storia_elettroacustica/analisi_della_musica_etlettroacustica.html
@@ -121,6 +121,20 @@
   </section>
 
 
+    <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
+                      <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-12 col-lg-6">
+                                    <div class="image-wrapper">
+                                        <img src="https://www.gabrielavelitch.com/assets/images/learn/Cage_Graph2.gif.gif" alt="John Cage - Graph2">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                      </section>
+
+
     <!-- Text-->
     <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
         <div class="container">
