--- a/pages/learn/storia_elettroacustica/analisi_della_musica_etlettroacustica.html
+++ b/pages/learn/storia_elettroacustica/analisi_della_musica_etlettroacustica.html
@@ -153,7 +153,7 @@
                       <br><br>
                       Analisi poietica praticamente impossibile. Se la grafizzazione l'ha fatta l'autore potrebbe essere considerata poietica. Non può esistere corrispondenza di quello che vedo con quello che è stato fatto. Il prodotto dell'azione del compositore potrebbe non prevedere l'interpretazione che ne farà il fruitore.
                       <br><br>
-                      Non tutto ciò che è musica è partitura, esistono manifestazioni musicali che non hanno partitura, per esempio la nostra Natasha_Barrett.
+                      Non tutto ciò che è musica è partitura, esistono manifestazioni musicali che non hanno partitura, per esempio la nostra Natasha Barrett.
                     </p>
                   </div>
               </div>
