--- a/pages/learn/storia_elettroacustica/analisi_della_musica_etlettroacustica.html
+++ b/pages/learn/storia_elettroacustica/analisi_della_musica_etlettroacustica.html
@@ -127,7 +127,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-12 col-lg-6">
                                     <div class="image-wrapper">
-                                        <img src="https://www.gabrielavelitch.com/assets/images/learn/Cage_Graph2.gif.gif" alt="John Cage - Graph2">
+                                        <img src="https://www.gabrielavelitch.com/assets/images/learn/Cage_Graph2.gif" alt="John Cage - Graph2">
                                     </div>
                                 </div>
                             </div>
