--- a/pages/learn/storia_elettroacustica/john_chowning.html
+++ b/pages/learn/storia_elettroacustica/john_chowning.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Leggi della Gestalt</title>
+  <title>John Chowning</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica Elettroacustica</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Leggi della Gestalt</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>John Chowning</strong></h4>
             </div>
         </div>
     </div>
@@ -86,14 +86,12 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Turenas e Sabelithe hanno aspetti di sperimentazione, mentre Phonè è uno dei brani piú evoluti, Phonè è infatti un pezzo virtuosistico, mentre Stria sono 16 minuti di spettri senza accadimenti, pura disposizione di spettri che si accavallano, brano quasi totalmente aurale. Ad una prima analisi Chowning può sembrare solamente un tecnico, ma nasce come un compositore, non come Risset che nasce anche come fisico. Chowning viene scosso dalla chiamata dell’articolo di Mathews, e dalle possibilità quasi infinite. Uno dei primi aspetti che affronta Chowning è la spazializzazione del suono.
                   </p>
                 </div>
             </div>
@@ -107,15 +105,15 @@
         </div>
         <div class="row align-items-center">
             <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Yx_Q_mIth0Q" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/mqIPWGwrbng" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>György Ligeti - String quartet No.2 (1968)</strong>
+                        <strong>John Chowning - Turenas (1969)</strong>
                     </h5>
                     <p class="mbr-text mbr-fonts-style display-7">
-                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
+                      In Turenas la spazializzazione del suono era molto complessa poiché il brano era pensato quadrifonicamente (non lo stereo che sentiamo oggi), la spazializzazione in Turenas era uno degli obiettivi del brano. Se togliamo lo spazio a Turenas, togliamo parte del brano, lo spazio di questo brano, ne fa l’identità dello stesso, ma quando il compositore ammette che esistono versioni stereofoniche, vuol dire che ammette che circolino versioni stereo dei suoi brani. Turenas non è un brano realizzato per essere ascoltato a casa, ma per essere spazializzato in concerto, aspetto teatrale (profondità) che si modifica. L’altro aspetto affrontato in Turenas è la Sintesi FM.
                     </p>
                 </div>
             </div>
@@ -126,6 +124,40 @@
 <br>
 <br>
 
+<!-- Text-->
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                <p class="mbr-text mbr-fonts-style display-7">
+                  L’FM rende possibile una cosa che le pratiche prima di essa non consentivano, come il catalogo di Risset.
+                  <br><br>
+                  Il ritorno sullo strumento ed il vibrato portato all’estremo, fece venire l’idea di base a Chowning, sintesi FM su strumento ad es. vibrato su violino a 200Hz.
+                  <br><br>
+                  Oltre la rinomata economia dei calcoli (sintesi FM solo 2 oscillatori per spettro ricco) ma la riuscita di spettri molto complessi ma con struttura ben precisa calcolabile in base alle funzioni di Bessel, Turenas ha spettri a farfalla che garantiscono la selezione soltanto di una classe di spettri che risponde ad una morfologia, spettri simmetrici su una frequenza fondamentale che hanno caratteristica inconfondibile, spettri infiniti all'interno della loro classe, varia l’estensione con l’indice di modulazione e dell’armonicità.
+                  <br><br>
+                  Produzione quindi di una classe di spettri particolari produzione di spettri dal solo calcolo (tutta la è fatta con 6 tipi di algoritmo),un suono con 30 parziali prima della FM si poteva realizzare solo con 30 oscillatori, ora con 2, dunque fu una scoperta di un algoritmo molto economico, per costruire una macchina commerciale.
+                  <br><br>
+                  Riportare la realizzazione del timbro nel solo algoritmo (come riportare su testo scritto la scrittura musicale attraverso la notazione mensurale) ragionando su 2 parametri:
+                  <ul>
+                    <li>indice di modulazione
+                    </li>
+                    <li>rapporto portante/modulante
+                    </li>
+                  </ul>
+                  <br><br>
+                </p>
+                <p class="mbr-text mbr-fonts-style display-7">
+                  In Stria Chowning verifica l’algoritmo, attenendosi solamente alla scrittura numerica, procedimento paragonabile alla scrittura nell’ambito mensurale. Dunque il paradigma che si va a creare è il trasferimento totale del calcolo della scrittura numerica. Possibilità che permette per la prima volta di avere numericamente possibilità di timbri, spiegato da Chowning nell'articolo del 1973.
+                  <br><br>
+                  Chowning cedette i diritti dell’FM al CCRMA di Stanford che era inizialmente il dipartimento che supportava l’intelligenza artificiale, iniziarono al CCRMA ad utilizzare Music di Mathews su PDP 12 e 11.
+                  <br><br>
+                  Il passo che definisce uno step per la musica digitale è il rilascio della DX7 della Yamaha.
+                </p>
+              </div>
+          </div>
+      </div>
+  </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
