--- a/pages/learn/storia_elettroacustica.html
+++ b/pages/learn/storia_elettroacustica.html
@@ -116,9 +116,10 @@
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/confronto_berio_stockhausen.html" class="text-primary"><b>Confronto Berio - Stockhausen (coming soon)</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/luigi_nono.html" class="text-primary"><b>Luigi Nono (coming soon)</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/karlheinz_stockhausen.html" class="text-primary"><b>Karlheinz Stockhausen (coming soon)</b></a>
-                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale.html" class="text-primary"><b>Musica Digitale</b></a>
+                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_prima_parte.html" class="text-primary"><b>Musica Digitale - Prima Parte</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/jean_claude_risset.html" class="text-primary"><b>Jean-Claude Risset</b></a>
                       <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/john_chowning.html" class="text-primary"><b>John Chowning</b></a>
+                      <br>- <a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_seconda_parte.html" class="text-primary"><b>Musica Digitale - Seconda Parte</b></a>
                       <br><br>
                   </p>
               </div>
